Adding music support

--- a/Chesed.cabal
+++ b/Chesed.cabal
@@ -76,6 +76,8 @@ executable Chesed
     build-depends:    base ^>=4.17.2.1,
                     gloss,
                     gloss-juicy,
+                    ALUT,
+                    OpenAL,
                     megaparsec
 
     -- Directories containing source files.
